# fun_projects

./: .gitignore  CLAUDE.md  README.md
anki_dtz_goethe_b1_de_pl/: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  TASKS.md  TODO.md  add_tts_to_cards.py  arch.md  card_templates.py  count_characters.py  csv_export.py  example.env  frequency_sort.py  generate_all_audio.py  generate_deck.py  get_frequency_list  main.py  prompt.py  pyproject.toml  regenerate_templates.py  schema.py  shared_deck_description_template.md  test_both_decks.py  test_direct_translation.py  test_load_compatibility.py  test_media_filtering.py  test_regenerate_templates.py  test_subdeck_generation.py  test_text_model.py  tts_engine.py  tts_research.py  utilities.py  validate_existing_functionality.py
anki_dtz_goethe_b1_de_pl/connectors/llm/: structured_gemini.py
anki_dtz_goethe_b1_de_pl/src/anki_deck_factory/: __init__.py
anki_dtz_goethe_b1_de_pl/src/anki_deck_factory/connectors/llm/: base.py  gemini.py
anki_dtz_goethe_b1_de_pl/src/anki_deck_factory/connectors/tts/: base.py  google.py
anki_dtz_goethe_b1_de_pl/src/anki_deck_factory/domain/: models.py
anki_dtz_goethe_b1_de_pl/src/anki_deck_factory/io/: apkg_handler.py  csv_handler.py
anki_dtz_goethe_b1_de_pl/tests/: conftest.py  test_audio_generation.py  test_frequency_sorting.py  test_translation_pipeline.py
anki_dtz_goethe_b1_de_pl/tests/old_arch/: test_both_decks.py  test_cleaning.py  test_direct_translation.py  test_load_compatibility.py  test_media_filtering.py  test_regenerate_templates.py  test_subdeck_generation.py  test_subdeck_integration.py  test_text_model.py
anki_for_jurafsky_slp3/: CLAUDE.md  Makefile  README.md  arch.md  example.env  main.py  mock_leetcode_pipeline.py  neetcode_pipeline.py  pyproject.toml  schema.py  slp3_pipeline.py  test_script.py  test_script2.py
anki_for_jurafsky_slp3/connectors/: __init__.py
anki_for_jurafsky_slp3/connectors/llm/: __init__.py  structured_gemini.py
anki_for_jurafsky_slp3/src/: __init__.py
anki_for_jurafsky_slp3/src/anki/: deck_creation.py  leetcode_deck_creation.py  slp3_deck_creation.py
anki_for_jurafsky_slp3/src/data_models/: __init__.py
anki_for_jurafsky_slp3/src/fetch_data/: __init__.py  fetch_jurafsky_slp3.py  fetch_leetcode.py
anki_for_jurafsky_slp3/src/models/: cards.py  leetcode_cards.py
anki_for_jurafsky_slp3/src/processing/: __init__.py  atomic_chunker.py  leetcode_card_creation.py  merger.py  preprocessor.py  semantic_chunker.py  splitter.py
anki_for_jurafsky_slp3/src/utils/: atomic_cards.json  cache.py  text_processing.py
anki_for_jurafsky_slp3/tests/: test_text_processing.py
anki_for_jurafsky_slp3/tests/processing/: test_atomic_chunker.py
anki_for_jurafsky_slp3/tests/utils/: test_text_processing.py
anki_potter_flashcards/: pyproject.toml
anki_potter_flashcards/anki_potter_flashcards/: epub_reader.py
anki_potter_flashcards/data/de/: HP1.epub  HP2.epub  HP3.epub  HP4.epub  HP5.epub  HP6.epub  HP7.epub
ml_system_design_solutions/: README.md  TEMPLATE.md  TODO.md
ml_system_design_solutions/illegal_trading_detection/: INTERVIEW_TRANSCRIPT.md  README.md
ml_system_design_solutions/illegal_trading_detection/alternatives/: trade_offs.md
ml_system_design_solutions/illegal_trading_detection/design/: high_level.md  ml_pipeline.md
ml_system_design_solutions/nearby_places_recommender/: INTERVIEW_TRANSCRIPT.md  README.md
ominous_timer/: README.md  version_claude.html  version_deepseek.html  version_deepseek_fixed_by_gemini.html  version_gemini.html  version_gpt.html
(+26 files in other folders)
