[project]
name = "anki-dtz-goethe-b1-de-pl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "genanki>=0.13.1",
    "google-genai>=1.25.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
]
