[project]
name = "anki-potter-flashcards"
version = "0.1.0"
description = ""
authors = [
    {name = "Krzysztof Jurkiewicz",email = "krzysztof.jurkiewicz@zowie.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ebooklib (>=0.18,<0.19)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
